added an example jupyter notebook and data files

--- a/VC_JupyterNotebook/RESSPyLab Parameter Calibration Orientation Notebook.ipynb
+++ b/VC_JupyterNotebook/RESSPyLab Parameter Calibration Orientation Notebook.ipynb
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4 - Exam with multiple tests"
+    "# 4 - Example with multiple tests"
    ]
   },
   {
